--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,7 @@ repositories {
 
 dependencies {
     compile 'com.google.protobuf:protobuf-java:3.14.0'
+    compile group: 'com.google.protobuf', name: 'protobuf-java-util', version: '3.14.0'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
